Sun Jan 19 06:38:48 2014  Benoit Daloze  <eregontp@gmail.com>

	* compar.c (cmp_equal): warn for this release and still rescue
	  standard exceptions for a nicer transition. See #7688.
	  Partly reverts r44502.

	* test/ruby/test_comparable.rb: adapt assertion to match new behavior.

Sun Jan 19 06:27:18 2014  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_comparable.rb: specify behavior for the different
	  kind of exceptions rescued (or not) by Comparable#==.

Sat Jan 18 23:12:19 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Avoid unnecessary ppoll/select on Linux.
	  Patch by Eric Wong.  [ruby-core:57950] [Bug #9039]

Sat Jan 18 22:57:44 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Resource::TXT#data): Return concatenated
	  string.
	  Patch by Ryan Brunner.  [ruby-core:58220] [Bug #9093]

Sat Jan 18 22:35:15 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_update_max_fd): Return immediately if the given fd is small
	  enough.

Sat Jan 18 22:25:53 2014  Tanaka Akira  <akr@fsij.org>

	* io.c: Test O_CLOEXEC only once.
	  Patch by Eric Wong.  [ruby-core:59419] [Feature #9328]

Sat Jan 18 21:24:49 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c: IP_MULTICAST_LOOP and IP_MULTICAST_TTL socket
	  option takes a byte on OpenBSD.
	  Fixed by Jeremy Evans.  [ruby-core:59496] [Bug #9350]

Sat Jan 18 21:19:04 2014  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: Make proxy disabling working again.
	  Fixed by Christophe Philemotte.   [ruby-core:59650] [Bug #9385]

Fri Jan 17 20:05:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator): keep source information methods
	  which start and end with '__'.  [ruby-core:59718] [Bug #9403]

Fri Jan 17 17:58:04 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_mod_s_constants): return its own constants for other
	  than Module itself.  [ruby-core:59763] [Bug #9413]

Tue Jan 16 00:17:00 2014  Kenta Murata  <mrkn@mrkn.jp>
